[package]
name = "coincbc-sys"
version = "0.2.4"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/coincbc-sys/"
description = "The low-level bindings to the COIN-OR Cbc library."
repository = "https://github.com/Maroon502/coincbc-sys.git"
keywords = ["coin-or", "Cbc", "cbc-sys", "coincbc-sys"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]

[features]
default = []
parallel = ["cbc-src/parallel"]

[dependencies]
cbc-src = { version = "0.2", features = ["cbcsolver"]}

[build-dependencies]
bindgen = "0.68"
coin-build-tools = "0.2"
